--- a/Runtime/Northgard.GameWorld.asmdef
+++ b/Runtime/Northgard.GameWorld.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "Northgard.GameWorld",
     "references": [
         "GUID:20fa240a0eb0c734fbe4031eda1b044b",
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:5102078c39d57e64ab95113fc697e8d2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
